[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/wc/lobby/ScenarioSelect.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 3
border_width_right = 3
border_color = Color( 2.2, 1.6, 3, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 1.5, 1.1, 2, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[node name="ScenarioSelect" type="VBoxContainer"]
alignment = 1
script = ExtResource( 1 )

[node name="Panel" type="MarginContainer" parent="."]
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScenarioPicture" type="TextureButton" parent="Panel"]
unique_name_in_owner = true
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="HorizontalHighlights" type="Panel" parent="Panel"]
visible = false
margin_right = 200.0
margin_bottom = 200.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VerticalHighlights" type="Panel" parent="Panel"]
visible = false
margin_right = 200.0
margin_bottom = 200.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="ScenarioName" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 204.0
margin_right = 200.0
margin_bottom = 218.0
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_ScenarioSelect_gui_input"]
[connection signal="mouse_entered" from="Panel/ScenarioPicture" to="." method="_on_ScenarioPicture_mouse_entered"]
[connection signal="mouse_exited" from="Panel/ScenarioPicture" to="." method="_on_ScenarioPicture_mouse_exited"]
[connection signal="pressed" from="Panel/ScenarioPicture" to="." method="_on_ScenarioPicture_pressed"]
